# big-bad

./: .gitignore  CMakeLists.txt  ForgetAbout.cmake  README.md
.devcontainer/: devcontainer.json  env_vars.bash  setup.bash  start_server.bash
docs/: requirements.md
src/: Exercise.cpp  Exercise.hpp  Printer.cpp  Printer.hpp  Stove.cpp  Stove.hpp  VendingMachine.cpp  VendingMachine.hpp  main.cpp  voodoo.cpp
tests/: example.robot  exercise.robot  test_Exercise.cpp  test_Printer.cpp  test_Stove.cpp  test_VendingMachine.cpp  test_stove.robot  test_vend.robot
tests/resources/: in.txt  inpits_file.py  match_file.py  match_output.resource  run_program.resource  run_voodoo.resource  set_input.py
